fix horizontal scroll on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,5 @@
 .edc-pg {
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-content: center;
